--- a/hotel_pattern/hotel_pattern.csproj
+++ b/hotel_pattern/hotel_pattern.csproj
@@ -139,7 +139,7 @@
     <None Include="HotelDataSet.xss">
       <DependentUpon>HotelDataSet.xsd</DependentUpon>
     </None>
-    <None Include="Patterns\README.md" />
+    <None Include="README.md" />
     <None Include="Patterns\рп отель.docx" />
     <None Include="Patterns\шаблон рп.docx" />
     <None Include="Properties\Settings.settings">
